@@ -2,6 +2,10 @@
 The format is based on [Keep a Changelog](http://keepachangelog.com/)
 
 ## [Unreleased]
+### Added
+- private_routes 추가
+  - GET /works
+
 ### Removed
 - Access_control_CORS 삭제
   - OPTIONS /status route 삭제
